# m740dasm

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
docs/: m37450.py  m37451.py  m3802.py  m3807.py  m3886.py  m50734.py
docs/notes/: instructions.csv  modes.txt
docs/testprog/: Makefile  lst2bin.py  testprog.asm
m740dasm/: command.py  devices.py  disasm.py  disassemble.py  listing.py  memory.py  symbols.py  tables.py  trace.py
m740dasm/tests/: __init__.py  test_disasm.py  test_symbols.py
m740dasm/tests/end_to_end/: Makefile  README.md  testprog.asm
