[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "m740dasm"
version = "1.0.0.dev0"
description = "Renesas (Mitsubishi) 740 disassembler"
authors = [
    { name = "Mike Naberezny", email = "mike@naberezny.com" }
]
maintainers = [
    { name = "Mike Naberezny", email = "mike@naberezny.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "BSD License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Assembly",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
m740dasm = "m740dasm.command:main"
